프로필 탭 스크롤 & 이중 탭 구현

--- a/SimpleHub/app/src/main/AndroidManifest.xml
+++ b/SimpleHub/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.ProfileActivity" />
-
+        <activity android:name=".ui.IssueActivity" />
 
     </application>
 
