--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         <activity android:name=".ui.ProfileActivity" />
         <activity android:name=".ui.IssueActivity" />
-
+        <activity android:name=".ui.PullsActivity" />
     </application>
 
 </manifest>
