리포 폴더 경로 들어가기

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".ui.IssueActivity" />
         <activity android:name=".ui.PullsActivity" />
         <activity android:name=".ui.RepoActivity" />
+        <activity android:name=".ui.DirActivity" />
     </application>
 
 </manifest>
