파일 읽기 하는중...

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".ui.PullsActivity" />
         <activity android:name=".ui.RepoActivity" />
         <activity android:name=".ui.DirActivity" />
+        <activity android:name=".ui.FileActivity" />
     </application>
 
 </manifest>
