--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     implementation 'com.android.support:cardview-v7:27.1.1'
 
+    implementation 'com.github.kbiakov:CodeView-android:1.3.1'
+
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
 
