add activity repo contributors/commits & use startActivityForResult & add time format method

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     implementation"org.jetbrains.anko:anko-commons:0.10.5"
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    
+
+    implementation 'com.github.dimorinny:floating-text-button:0.0.4'
+
 
     implementation 'com.android.support:design:27.1.1'
 
