--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.user.simplehub">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
 
     <application
         android:allowBackup="true"
@@ -30,7 +32,17 @@
                     android:scheme="gitclient" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.ProfileActivity" />
+        <activity
+            android:name=".ui.ProfileActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".ui.SearchActivity" />
+        </activity>
         <activity android:name=".ui.IssueActivity" />
         <activity android:name=".ui.PullsActivity" />
         <activity android:name=".ui.RepoActivity" />
@@ -38,7 +50,15 @@
         <activity android:name=".ui.FileActivity" />
         <activity android:name=".ui.ContributorActivity" />
         <activity android:name=".ui.CommitActivity" />
-        <activity android:name=".ui.SearchActivity" />
+        <activity android:name=".ui.SearchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
     </application>
 
 </manifest>
