--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ dependencies {
 
     implementation 'com.github.dimorinny:floating-text-button:0.0.4'
 
-
     implementation 'com.android.support:design:27.1.1'
 
     implementation "org.jetbrains.anko:anko-commons:0.10.5"
@@ -52,6 +51,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'com.github.kbiakov:CodeView-android:1.3.1'
 
