--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
@@ -50,6 +49,7 @@
         <activity android:name=".ui.FileActivity" />
         <activity android:name=".ui.ContributorActivity" />
         <activity android:name=".ui.CommitActivity" />
+        <activity android:name=".ui.OtherProfileActivity" />
         <activity android:name=".ui.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
