add IssueDetailActivity (show issue events)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,14 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".ui.IssueDetailActivity"
+            android:parentActivityName=".ui.IssueActivity">
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".ui.IssueActivity" />
+
+        </activity>
     </application>
 
 </manifest>
